Revert "bug: removes unneccesary css statements."
This reverts commit 9f9b7a79ccfc514ccbe6706231e2fd8b102f0f9a.

Keeping the commit for history, because learning is fun: The property was neccesary because in landscape it doesn't align if its not there.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,6 +434,10 @@ footer {
       mask-image: linear-gradient(to bottom, black 90%, transparent);
     }
   }
+  #hero-contact-buttom {
+    text-align: left;
+    margin: 0;
+  }
 }
 @media (aspect-ratio > 1.7) {
   #hero .content-wrapper {
